# ocre-runtime

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Kconfig  MAINTAINERS.md  README.md  SECURITY.md  TODO.txt  VERSION  build.sh  ocre.code-workspace  package-lock.json  package.json  prj.conf  west.yml
.github/: CODEOWNERS  (+4 more)
src/messaging/: CMakeLists.txt  message.h  message_types.h
src/ocre/: CMakeLists.txt  commit_id.h  container.c  container.h  context.c  context.h  messages.h  ocre.c  ocre.h  ocre_input_file.h  unique_random_id.c  unique_random_id.h  utils.h  version.h  wasm_manifest.h.in
src/ocre/Sensor_API/: ocre_sensor_API.c  ocre_sensor_API.h  rng_sensor.h
src/ocre/api/: ocre_api.c  ocre_api.h  ocre_common.c  ocre_common.h
src/ocre/component/: component.c  component.h
src/ocre/components/container_supervisor/: component_supervisor.yaml  cs_main.c  cs_sm.c  cs_sm.h  cs_sm_impl.c  cs_sm_impl.h  message_types.h
src/ocre/container_healthcheck/: ocre_container_healthcheck.c  ocre_container_healthcheck.h
src/ocre/container_messaging/: messaging.c  messaging.h
src/ocre/container_messaging_posix/: messaging.c  messaging.h
src/ocre/fs/: fs.c  fs.h
src/ocre/include/ocre/: container.h  context.h  library.h  ocre.h
src/ocre/ocre_container_runtime/: ocre_container_runtime.c  ocre_container_runtime.h
src/ocre/ocre_display/: ocre_display.c  ocre_display.h  ocre_display_sdl.c
src/ocre/ocre_gpio/: ocre_gpio.c  ocre_gpio.h
src/ocre/ocre_messaging/: ocre_messaging.c  ocre_messaging.h
src/ocre/ocre_sensors/: ocre_sensors.c  ocre_sensors.h  rng_sensor.c  rng_sensor.h
src/ocre/ocre_timers/: ocre_timer.c  ocre_timer.h
src/ocre/sensor/: ocre_sensor_API.c  ocre_sensor_API.h
src/ocre/shell/: ocre_shell.c  ocre_shell.h
src/ocre/sm/: sm.c  sm.h
src/ocre/timer/: ocre_timer.c  ocre_timer.h
src/ocre/util/: rm_rf.c  rm_rf.h  string_array.c  string_array.h  unique_random_id.c  unique_random_id.h
src/ocre/utils/: utils.h
src/ocre/utils/c-smf/: CMakeLists.txt  README.md
src/ocre/utils/c-smf/smf/: CMakeLists.txt  smf.c  smf.h
src/ocre/utils/c-smf/test/: CMakeLists.txt  test.c
src/platform/posix/: CMakeLists.txt  file_alloc_fread.c  file_alloc_read.c  file_mmap.c  log.c  lstat.c  memory.c
src/platform/zephyr/: CMakeLists.txt  lstat.c  memory.c
src/runtime/: CMakeLists.txt
src/runtime/include/ocre/runtime/: vtable.h
src/runtime/wamr/: CMakeLists.txt  wamr.c
src/runtime/wamr-wasip1/: CMakeLists.txt  wamr.c
src/runtime/wamr-wasip1/ocre_api/: CMakeLists.txt  ocre_api.c  ocre_api.h  ocre_common.c  ocre_common.h
src/runtime/wamr-wasip1/ocre_api/core/: core_eventq.c  core_external.h  core_internal.h  core_memory.c  core_misc.c  core_mutex.c  core_timer.c
src/runtime/wamr-wasip1/ocre_api/ocre_gpio/: ocre_gpio.c  ocre_gpio.h
src/runtime/wamr-wasip1/ocre_api/ocre_messaging/: ocre_messaging.c  ocre_messaging.h
src/runtime/wamr-wasip1/ocre_api/ocre_sensors/: custom,rng-sensor.yaml  ocre_sensors.c  ocre_sensors.h  rng_sensor.c  rng_sensor.h
src/runtime/wamr-wasip1/ocre_api/ocre_timers/: ocre_timer.c  ocre_timer.h
src/runtime/wamr-wasip1/ocre_api/utils/: strlcat.c  strlcat.h
src/runtime/wamr/ocre_api/: CMakeLists.txt  ocre_common.c
src/runtime/wamr/ocre_api/core/: core_external.h  core_internal.h  core_misc.c  core_slist.c  core_timer.c
src/runtime/wamr/ocre_api/ocre_gpio/: ocre_gpio.c  ocre_gpio.h
src/runtime/wamr/ocre_api/ocre_messaging/: ocre_messaging.c
src/runtime/wamr/ocre_api/ocre_sensors/: ocre_sensors.c  usage.md
src/runtime/wamr/ocre_api/ocre_timers/: ocre_timer.c
src/samples/bash_runtime/posix/: CMakeLists.txt  main.c
src/samples/bash_runtime/posix/bash/: CMakeLists.txt  bash.c
src/samples/demo/posix/: CMakeLists.txt
src/samples/demo/zephyr/: CMakeLists.txt  fstab.overlay  prj.conf
src/samples/demo/zephyr/boards/: b_u585i_iot02a.conf  b_u585i_iot02a.overlay  native_sim_64.conf  native_sim_64.overlay  pico_plus2_rp2350b_m33_w.conf
src/samples/mini/posix/: CMakeLists.txt
src/samples/mini/zephyr/: CMakeLists.txt  fstab.overlay  prj.conf
src/samples/mini/zephyr/boards/: b_u585i_iot02a.overlay  native_sim.conf  native_sim_64.overlay  pico_plus2_rp2350b_m33_w.conf  pico_plus2_rp2350b_m33_w.overlay
src/samples/readline/posix/: CMakeLists.txt  ocre.c
src/samples/static_checks/posix/: CMakeLists.txt  download_file.c  ocre.c
src/samples/supervisor/posix/: CMakeLists.txt  download.c  ipc.h  ocre.c  ocred.c  zcbor_helpers.c  zcbor_helpers.h
src/samples/supervisor/posix/client/: CMakeLists.txt  client.c  context.c
src/samples/supervisor/posix/server/: CMakeLists.txt  handlers.c  handlers.h  ocred.c  pid_file.c  pid_file.h  runners.c  runners.h  waiters.c  waiters.h
src/samples/supervisor/zephyr/: CMakeLists.txt  download_file.c  prj.conf  service.c  shell.c
src/samples/supervisor/zephyr/boards/: b_u585i_iot02a.conf  b_u585i_iot02a.overlay  native_sim_64.conf  native_sim_64.overlay  overlay-nsos.conf  pico_plus2_rp2350b_m33_w.conf  pico_plus2_rp2350b_m33_w.overlay  pico_plus2_rp2350b_m33_w_mcuboot.conf
src/shared/platform/zephyr/: CMakeLists.txt  core_eventq.c  core_fs.c  core_internal.h  core_memory.c  core_misc.c  core_mq.c  core_mutex.c  core_thread.c  core_timer.c  ocre_internal.cmake
src/shell/: CMakeLists.txt  command.h  container.c  container.h  image.c  image.h  shell.c
src/shell/container/: create.c  create.h  inspect.c  inspect.h  kill.c  kill.h  pause.c  pause.h  ps.c  ps.h  rm.c  rm.h  start.c  start.h  stop.c  stop.h  unpause.c  unpause.h  wait.c  wait.h
src/shell/image/: ls.c  ls.h  pull.c  pull.h  rm.c  rm.h  sha256_file.c  sha256_file.h
src/shell/sha256/: sha256.c  sha256.h
tests/coverage/: CMakeLists.txt
tests/leaks/: CMakeLists.txt
tests/system/posix/: CMakeLists.txt
tests/system/zephyr/context/: CMakeLists.txt  fstab.overlay
tests/system/zephyr/lib/: CMakeLists.txt  prj.conf
tests/system/zephyr/ocre/: CMakeLists.txt  prj.conf
zephyr/: CMakeLists.txt  Kconfig  module.yml  storage_partition.cmake  wamr copy.cmake  wamr.cmake
(+190 files in other folders)
